# gis_autoadmin

./: README.md  pyproject.toml
autoadmin/: __init__.py  autoadmin.py  main.py  setup.py
autoadmin/src/: __init__.py  admin.py  auth.py  authenticate.py  content.py  tags.py
scripts/: local_run.py
