[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoadmin"
version = "0.2"
description = "A tool for handling administrative GIS tasks with tags"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas"
    ]

[tool.setuptools.packages.find]
where = ["."]
include = ["autoadmin", "autoadmin.*"]